# EMQX-Auth-Service

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.plugin  Dockerfile.rocksdb  Makefile  README.md  api_documentation.md  autobuild.sh  check_connection.sh  commit_msg.txt  docker-compose-dev.yml  docker-compose.dev.yml  docker-compose.yml  wrk_get_users_healthcheck.txt
migration/: Cargo.toml
migration/src/: lib.rs  m20260223_000001_create_mqtt_users_table.rs  m20260302_000001_drop_is_deleted_column.rs
migrations/: 20240128000000_init_mqtt_users.sql
src/: main.rs  server.rs
src/dtos/: jwt_dto.rs  mod.rs  mqtt_dto.rs  response_dto.rs  user_dto.rs
src/entities/: mod.rs  mqtt_entity.rs
src/gRPC/: user.proto
src/handler/: create_mqtt_handler.rs  delete_mqtt_handler.rs  get_mqtt_credentials_handler.rs  get_mqtt_list_handler.rs  get_user_list_handler.rs  handler_error.rs  mod.rs  mqtt_acl_handler.rs  mqtt_login_handler.rs  soft_delete_mqtt_handler.rs  userHandler.rs
src/infrastructure/: database.rs  mod.rs  mysql.rs  postgres.rs  rocksdb.rs
src/middleware/: api_key.rs  logger_request.rs  mod.rs  powered_by.rs
src/repositories/: cache_repository.rs  check_user_active_repository.rs  create_mqtt_repository.rs  create_user_repository.rs  delete_mqtt_repository.rs  get_mqtt_by_username_repository.rs  get_mqtt_list_repository.rs  get_user_list_repository.rs  get_user_repository.rs  mod.rs  mqtt_login_repository.rs  repository_error.rs  soft_delete_mqtt_repository.rs  userRepository.rs
src/services/: check_user_active.rs  create_mqtt_service.rs  create_user_service.rs  delete_mqtt_service.rs  get_mqtt_credentials_service.rs  get_mqtt_list_service.rs  mod.rs  mqtt_acl_service.rs  mqtt_login_service.rs  service_error.rs  soft_delete_mqtt_service.rs  userCreateService.rs
src/utils/: encryption.rs  hash_password.rs  jwt_sign.rs  mod.rs
tests/stress/: instruction.md
tests/stress/db/: hey_get_local.txt  wrk_c2000.txt
tests/stress/healthcheck/: hey_get_local_healthcheck.txt  wrk_get_users_healthcheck.txt
