[package]
name = "client_management"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocksdb = "0.24.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
bincode = "2.0.1"
argon2 = "0.5"
rand = "0.8"
thiserror = "2.0.17"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
hex = "0.4.3"
dotenvy = "0.15.7"
log = "0.4.28"

