[package]
name = "emqx_auth_plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
rocksdb = "0.24.0"
bincode = "2.0.1"
thiserror = "2.0.17"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
hex = "0.4.3"
dotenvy = "0.15.7"
log = "0.4.28"
sha2 = "0.10.9"
subtle = "2.6.1"
argon2 = "0.5.3"
env_logger = "0.11.8"
chrono = "0.4.42"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono", "uuid"] }
dashmap = "6.1.0"
serde_json = "1.0"
