[workspace]
members = [".", "migration"]

[package]
name = "emqx_auth_service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.17"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
hex = "0.4.3"
dotenvy = "0.15.7"
log = "0.4.28"
env_logger = "0.11.8"
chrono = "0.4.42"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
sqlx = { version = "0.8", features = ["mysql", "postgres", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1.1.0", features = ["sqlx-mysql", "sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.1.0"
aes-gcm = "0.10.3"
base64 = "0.22.1"
rand = "0.8.5"
migration = { path = "migration" }
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
